--- a/themes/habitat/templates/modular/integrations.html.twig
+++ b/themes/habitat/templates/modular/integrations.html.twig
@@ -1,5 +1,5 @@
-                        <div class="text-center">
-                            <h3 class="padding-vert-10">{{ page.title }}</h3>
+                        <h3 class="padding-vert-10 text-center">{{ page.title }}</h3>
+                        <div class="text-justify">
                             {{ content }}
                         </div>
 {# {% for integration in page.header.integrations %}
