--- a/themes/habitat/templates/modular/extensions.html.twig
+++ b/themes/habitat/templates/modular/extensions.html.twig
@@ -1,2 +1,2 @@
-                            {# <h4>{{ page.title }}</h4> #}
+                            <h4>{{ page.title }}</h4>
 							{{ content }}
