--- a/themes/habitat/templates/modular/operation.html.twig
+++ b/themes/habitat/templates/modular/operation.html.twig
@@ -1,14 +1,11 @@
 							<div class="row text-center">
-                            	<h4>{{ page.title }}</h4>
+                            	<!-- <h4>{{ page.title }}</h4> -->
 								{{ content }}
 {% for section in page.header.sections %}
 								<div class="col-md-4">
-									{# <span class="fa-stack">
-										<span class="fa fa-circle-o fa-stack-2x color-primary"></span>
-										<strong class="fa-stack-1x color-primary">{{ section.rank }}</strong>
-									</span> #}
 									<i class="fa fa-{{ section.icon }} fa-2x color-primary"></i>
 									<p class="animate fadeIn">{{ section.text }}</p>
+									<p>{{ section.more }}</p>
 								</div>
 {% endfor %}
 							</div>
