--- a/themes/habitat/templates/jaxon.html.twig
+++ b/themes/habitat/templates/jaxon.html.twig
@@ -51,7 +51,7 @@
                             <!-- End Jaxon content -->
 {% endif %}
 
-{% if page.route == '/docs/v3x' or page.route == '/docs/v2x' %}
+{% if page.route == '/docs/v4x' or page.route == '/docs/v3x' or page.route == '/docs/v2x' %}
                             <!-- Section TOC -->
                             <div class="row">
                                 <div class="col-md-12">
