--- a/user/themes/habitat/templates/header/css.html.twig
+++ b/user/themes/habitat/templates/header/css.html.twig
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="/assets/css/prism.css" rel="stylesheet">
         <!-- Google Fonts-->
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
+        <!-- GitHub ribbon -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" rel="stylesheet" />
 		<style type="text/css">
 		pre[class*="language-"] {
             margin-top: 0px;
@@ -19,6 +21,9 @@
 		    height: 56px;
 		    padding-top: 16px;
 		}
+        .github-fork-ribbon:before {
+            background-color: #33747a;
+        }
 		</style>
 {% endblock %}
 {{ assets.css()|raw }}
