Move the layout to a new dir.

--- a/user/themes/habitat/templates/blog.html.twig
+++ b/user/themes/habitat/templates/blog.html.twig
@@ -1,4 +1,4 @@
-{% extends 'partials/page.html.twig' %}
+{% extends 'layouts/page.html.twig' %}
 
 {% block content %}
 {% set collection = page.collection() %}
