Add the integrations section in the v5.x docs.

--- a/user/themes/habitat/templates/footer/links.html.twig
+++ b/user/themes/habitat/templates/footer/links.html.twig
@@ -12,8 +12,7 @@
                         <!-- End Footer Menu -->
                         <!-- Copyright -->
                         <div id="copyright" class="col-md-4">
-                            <p class="pull-right">Theme by <a href="http://www.bootstrap51.com" target="_blank">Bootstrap51</a>,
-                            edited for the <a href="https://www.getgrav.org" target="_blank">Grav CMS</a></p>
+                            <p class="pull-right">Built with the <a href="https://www.getgrav.org" target="_blank">Grav CMS</a></p>
                         </div>
                         <!-- End Copyright -->
                     </div>
