New blog entry: announcing Jaxon 5.

--- a/user/themes/habitat/templates/header/css.html.twig
+++ b/user/themes/habitat/templates/header/css.html.twig
@@ -24,10 +24,17 @@
         .doc-page-content th, .doc-page-content td {
             padding: 2px 8px;
         }
-        .doc-page-content h3 {
+        h3 {
             margin: 10px 0;
             font-size: 18px;
             font-weight: 400;
+            color: #555555;
+        }
+        h4 {
+            margin: 10px 0;
+            font-size: 16px;
+            font-weight: 400;
+            color: #555555;
         }
         .github-fork-ribbon:before {
             background-color: #33747a;
