--- a/user/themes/habitat/templates/header/css.html.twig
+++ b/user/themes/habitat/templates/header/css.html.twig
@@ -36,6 +36,9 @@
             font-weight: 400;
             color: #555555;
         }
+        blockquote {
+            font-size: 14px;
+        }
         .github-fork-ribbon:before {
             background-color: #33747a;
         }
